RESOLVED FIXED73888
REGRESSION (WebKit2): Kill ring is not cleared when selection changes
https://bugs.webkit.org/show_bug.cgi?id=73888
Summary REGRESSION (WebKit2): Kill ring is not cleared when selection changes
Alexey Proskuryakov
Reported 2011-12-05 21:24:18 PST
Pressing Ctrl+K twice should only add to kill ring if nothing else happens in between. <rdar://problem/10532310>
Attachments
proposed fix (5.96 KB, patch)
2011-12-05 21:39 PST, Alexey Proskuryakov
mrowe: review+
webkit.review.bot: commit-queue-
Alexey Proskuryakov
Comment 1 2011-12-05 21:39:35 PST
Created attachment 117988 [details] proposed fix
Alexey Proskuryakov
Comment 2 2011-12-05 21:41:25 PST
Comment on attachment 117988 [details] proposed fix Landing via commit queue to give bots time to complain.
WebKit Review Bot
Comment 3 2011-12-05 21:58:00 PST
Comment on attachment 117988 [details] proposed fix Attachment 117988 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/10736565
Alexey Proskuryakov
Comment 4 2011-12-05 23:03:11 PST
> Attachment 117988 [details] did not pass chromium-ews (chromium-xvfb): > Output: http://queues.webkit.org/results/10736565 The error doesn't appear related to this patch.
WebKit Review Bot
Comment 5 2011-12-06 01:59:13 PST
Comment on attachment 117988 [details] proposed fix Rejecting attachment 117988 [details] from commit-queue. New failing tests: editing/pasteboard/emacs-ctrl-k-with-move.html Full output: http://queues.webkit.org/results/10733906
Alexey Proskuryakov
Comment 6 2011-12-06 09:38:07 PST
Committed <http://trac.webkit.org/changeset/102148>. Added the new test to fail lists of platforms that failed existing emacs tests.
Note You need to log in before you can comment on or make changes to this bug.