        REGRESSION (WebKit2): Kill ring is not cleared when selection changes         https://bugs.webkit.org/show_bug.cgi?id=73888         <rdar://problem/10532310>

Reviewed by Mark Rowe.

        Test: editing/pasteboard/emacs-ctrl-k-with-move.html

        * editing/Editor.cpp: (WebCore::Editor::respondToChangedSelection): Moved the code to clear
        kill ring from Mac WebKit, as it's needed in all Mac ports at least.



Canonical link: https://commits.webkit.org/90595@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102148 268f45cc-cd09-0410-ab3c-d52691b4dbfc